Test template changes

--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -23,18 +23,18 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.power.value" class="resource-label">Power</label>
+          <label for="system.effort.value" class="resource-label">Effort</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.power.value" value="{{system.power.value}}" data-dtype="Number"/>
+            <input type="text" name="system.effort.value" value="{{system.power.value}}" data-dtype="Number"/>
             <span> / </span>
-            <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
+            <input type="text" name="system.effort.max" value="{{system.power.max}}" data-dtype="Number"/>
           </div>
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.cr" class="resource-label">CR / XP</label>
+          <label for="system.hd" class="resource-label">CR / XP</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.cr" value="{{system.cr}}" data-dtype="Number"/>
+            <input type="text" name="system.hd" value="{{system.hd}}" data-dtype="Number"/>
             <span> / </span>
             <input type="text" disabled="true" name="system.xp" value="{{system.xp}}" data-dtype="Number"/>
           </div>
