--- a/src/scss/foundry-godbound.scss
+++ b/src/scss/foundry-godbound.scss
@@ -1,5 +1,5 @@
 // Add custom fonts by visiting and search https://fonts.google.com
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&display=swap');
 
 // Import utilities.
 @import 'utils/typography';
