--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -15,19 +15,19 @@
         center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
           <label for="system.hp.value" class="resource-label">Health</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.health.value" value="{{system.hp.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
+          <div class="resource-content flexrow flex-center">
+            <input type="text" name="system.health.value" value="{{system.hp.value}}" data-dtype="Number"/>
+            <span>/</span>
+            <input type="text" name="system.hp.max" value="{{system.hp.max}}" data-dtype="Number"/>
           </div>
         </div>
 
         <div class="resource flex-group-center">
           <label for="system.effort.value" class="resource-label">Effort</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.effort.value" value="{{system.effort.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.effort.max" value="{{system.effort.max}}" data-dtype="Number"/>
+          <div class="resource-content flexrow flex-center">
+            <input type="text" name="system.effort.value" value="{{system.effort.value}}" data-dtype="Number"/>
+            <span> / </span>
+            <input type="text" name="system.effort.max" value="{{system.effort.max}}" data-dtype="Number"/>
           </div>
         </div>
 
@@ -45,6 +45,7 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
+    <a class="item" data-tab="summary">Summary</a>
     <a class="item" data-tab="features">Features</a>
     <a class="item" data-tab="description">Description</a>
     <a class="item" data-tab="items">Items</a>
@@ -55,27 +56,20 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
+    <div class="tab summary" data-group="primary" data-tab="summary">
+      {{> "systems/foundry-godbound/templates/actor/pc/pc-summary.hbs"}}
+    </div>
+
     {{!-- Owned Features Tab --}}
     <div class="tab features" data-group="primary" data-tab="features">
       <section class="grid grid-3col">
-        <aside class="sidebar">
-
-          {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-          use both the "grid" and "grid-Ncol" class where "N" can be any number
-          from 1 to 12 and will create that number of columns.  --}}
-          <div class="abilities flexcol">
-            {{#each system.abilities as |ability key|}}
-            <div class="ability flexrow flex-group-center">
-              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
-            </div>
-            {{/each}}
-          </div>
-        </aside>
+        
 
         {{!-- For the main features list, span the right two columns --}}
         <section class="main grid-span-2">
+          <div class="flexrow">
+
+          </div>
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
           {{> "systems/foundry-godbound/templates/actor/parts/actor-features.hbs"}}
         </section>
@@ -86,7 +80,7 @@
     {{!-- Biography Tab --}}
     <div class="tab biography" data-group="primary" data-tab="description">
       {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+      {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
     {{!-- Owned Items Tab --}}
