--- a/templates/actor/pc/pc-summary.hbs
+++ b/templates/actor/pc/pc-summary.hbs
@@ -1,18 +1,40 @@
 <section class="main p-4">
     <div class="grid grid-3col">
-        <div class="abilities flex-col">
+        <div class="flexcol">
             <div class="flexrow">
-                <div class="flex-2 text-center">Ability Scores</div>
-                <div class="flex-1 text-center">Modifier</div>
+                <div class="flex-2 text-center">
+                    <h3>
+                        Ability Scores
+                    </h3>
+                </div>
+                <div class="flex-1 text-center">
+                    <h3>
+                        Modifier
+                    </h3>
+                </div>
+                <div class="flex-1 text-center">
+                    <h3>
+                        Check
+                    </h3>
+                </div>
             </div>
             {{#each system.abilities as |ability key|}}
                 <div class="ability flexrow flex-group-center">
-                    <label for="system.abilities.{{key}}.value" class="resource-label rollable align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-                    <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-                    <span class="ability-mod" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+                    <div class="flex-2 text-center">
+                        <label for="system.abilities.{{key}}.value" class="resource-label rollable align-left flex-2" data-roll-type="abilityCheck" data-label="{{ability.label}} Check">{{ability.label}}</label>
+                    </div>
+                    <div class="flex-1 text-center">
+                        <span class="ability-mod flex-1">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+                    </div>
+                    <div class="flex-1 text-center">
+                        <span class="ability-check flex-1" >{{ability.check}}</span>
+                    </div>
                 </div>
             {{/each}}
         </div>
+
+
+
         <div class="">
             test
         </div>
