--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -40,7 +40,10 @@
 
       </div>
     </div>
+    
   </header>
+
+  
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
@@ -57,6 +60,14 @@
   <section class="sheet-body">
 
     <div class="tab summary" data-group="primary" data-tab="summary">
+      <div class="grid grid-6col">
+      {{#each system.abilities as |ability key|}}
+          <div class="ability flex-col">
+              <label for="system.abilities.{{key}}.value" class="resource-label">{{ability.label}}</label>
+              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
+          </div>
+      {{/each}}
+  </div>
       {{> "systems/foundry-godbound/templates/actor/pc/pc-summary.hbs"}}
     </div>
 
@@ -67,9 +78,6 @@
 
         {{!-- For the main features list, span the right two columns --}}
         <section class="main grid-span-2">
-          <div class="flexrow">
-
-          </div>
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
           {{> "systems/foundry-godbound/templates/actor/parts/actor-features.hbs"}}
         </section>
