Add layout for saves

--- a/templates/actor/pc/pc-summary.hbs
+++ b/templates/actor/pc/pc-summary.hbs
@@ -10,53 +10,90 @@
     </div>
 
 
-    <div class="grid grid-3col">
+    <div class="grid grid-2col">
         
         <div class="flexcol">
             {{!-- Display modifiers and check --}}
-            <div class="flexrow">
-                <div class="flex-2 text-center flexcol">
-                    <h3>
-                        Attributes
-                    </h3>
-                    {{#each system.abilities as |ability key|}}
-                        <div class="flex-2 text-center">
-                            <label for="system.abilities.{{key}}.value" class="resource-label rollable align-left flex-2" data-ability="{{key}}" data-roll-type="abilityCheck" data-label="{{ability.label}} check">{{ability.label}}</label>
-                        </div>
-                    {{/each}}
-                </div>
-                <div class="flex-1 text-center flexcol">
-                    <h3>
-                        Modifier
-                    </h3>
-                     {{#each system.abilities as |ability key|}}
-                        <div class="flex-1 text-center">
-                            <span class="ability-mod flex-1">{{numberFormat ability.mod decimals=0 sign=true}}</span>
-                        </div>
-                    {{/each}}
-                </div>
-                <div class="flex-1 text-center flexcol">
-                    <h3>
-                        Check
-                    </h3>
-                    {{#each system.abilities as |ability key|}}
-                        <div class="flex-1 text-center">
-                            <span class="ability-check flex-1" >{{ability.check}}</span>
-                        </div>
-                     {{/each}}
+            <div class="spaced">
+                <h2>
+                    Attributes
+                </h2>
+                <div class="flexrow">
+                    <div class="flex-2 text-center flexcol">
+                        <h3>
+                            Attributes
+                        </h3>
+                        {{#each system.abilities as |ability key|}}
+                            <div class="flex-2 text-center">
+                                <label for="system.abilities.{{key}}.value" class="resource-label rollable align-left flex-2" data-ability="{{key}}" data-roll-type="abilityCheck" data-label="{{ability.label}} check">{{ability.label}}</label>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <div class="flex-1 text-center flexcol">
+                        <h3>
+                            Modifier
+                        </h3>
+                        {{#each system.abilities as |ability key|}}
+                            <div class="flex-1 text-center">
+                                <span class="ability-mod flex-1">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <div class="flex-1 text-center flexcol">
+                        <h3>
+                            Check
+                        </h3>
+                        {{#each system.abilities as |ability key|}}
+                            <div class="flex-1 text-center">
+                                <span class="ability-check flex-1" >{{ability.check}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
                 </div>
             </div>
 
-
+            {{!-- Saves --}}
+            <div class="spaced">
+                <h2>Saving Throws</h2>
+                <div class="flexrow">
+                    <div class="flex-2 text-center flexcol">
+                        <h3>
+                            Type
+                        </h3>
+                        {{#each system.saves as |save key|}}
+                            <div class="flex-2 text-center">
+                                <label for="system.saves.{{key}}" class="resource-label rollable align-left flex-2">{{save.label}}</label>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <div class="flex-1 text-center flexcol">
+                        <h3>
+                            Modifier
+                        </h3>
+                        {{#each system.saves as |save key|}}
+                            <div class="flex-1 text-center">
+                                <span class="saving-throw-source flex-1">{{numberFormat save.base decimals=0 sign=true}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
+                    <div class="flex-1 text-center flexcol">
+                        <h3>
+                            Save
+                        </h3>
+                        {{#each system.saves as |save key|}}
+                            <div class="flex-1 text-center">
+                                <span class="saving-throw-final flex-1" >{{save.base}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
+                </div>
+            </div>
         </div>
 
 
 
         <div class="">
             test
-        </div>
-        <div class="">
-            test 2
         </div>
     </div>
     
